samples/_failures_safe/1761317147_24f9c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5893bb36.c: In function ‘main’:
./samples/SAFE/__tmp_5893bb36.c:153:13: error: expected declaration or statement at end of input
  153 |             if (add_log_entry(&collection, &entry)) {
      |             ^~
./samples/SAFE/__tmp_5893bb36.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5893bb36.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5893bb36.c:153:13: error: expected declaration or statement at end of input
